@@ -927,6 +927,7 @@ fallen out of use. To avoid confusion, they have not been re-used.
   73  disallowed Unicode code point (>= 0xd800 && <= 0xdfff)
   74  invalid UTF-16 string (specifically UTF-16)
   75  name is too long in (*MARK), (*PRUNE), (*SKIP), or (*THEN)
+  76  character value in \eu.... sequence is too large
 .sp
 The numbers 32 and 10000 in errors 48 and 49 are defaults; different values may
 be used if the limits were changed when PCRE was built.
@@ -2666,6 +2667,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 04 May 2012
+Last updated: 17 June 2012
 Copyright (c) 1997-2012 University of Cambridge.
 .fi
