@@ -320,4 +320,8 @@ not matter. --/
 /(*:0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDE)XX/K
     XX
 
+/\u0100/<JS>
+
+/[\u0100-\u0200]/<JS>
+
 /-- End of testinput14 --/
